# fusion

./: .gitignore  README.md
.github/: CODE_OF_CONDUCT.md  (+3 more)
backend/: .cfg.example.yml  .env  .env.example  .gitattributes  .gitignore  alembic.ini  logging.yaml  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 78ba13627e4a_add_avatar_to_user.py  afa95c2fb3f3_create_user.py  bad723d17079_add_avatar_to_user.py
backend/requirements/: common.txt  dev.txt
backend/src/: app.py  config.py  main.py  server.py  template.py
backend/src/api/: deps.py
backend/src/api/v1/: __init__.py
backend/src/api/v1/auth/: emails.py  models.py  routes.py  schemas.py  service.py  verify_codes.py
backend/src/api/v1/uploads/: __init__.py  routes.py
backend/src/api/v1/users/: __init__.py  deps.py  models.py  routes.py  schemas.py  service.py
backend/src/api/v1/verification/: emails.py  mailings.py  routes.py  schemas.py  service.py
backend/src/api/v1/verify/: __init__.py  emails.py  routes.py  schemas.py  service.py
backend/src/core/: cache.py  config.py  db.py  files.py  logging.py  redis.py  security.py
backend/src/email/: utils.py
backend/src/email/templates/build_email/: verify_email.html
backend/src/emails/: service.py
backend/src/emails/templates/: base.jinja  verification-email.html
backend/src/emails/templates/auth/: reset_password.jinja  verify.jinja
backend/src/emails/templates/build_email/: verify_email.html
backend/src/mail/: service.py
backend/src/mail/templates/: base.jinja  verification.jinja
backend/src/storage/: fs.py
(+148 files in other folders)
