[project]
name = "fusion"
version = "0.0.0"
dependencies = [
  "fastapi[all]>=0.112.0",
  "fastapi-mail>=1.4.1",
  "sqlalchemy>=2.0.32",
  "alembic>=1.13.2",
  "psycopg>=3.2.1",
  "psycopg-binary>=3.2.1",
  "psycopg2>=2.9.9",
  "psycopg2-binary>=2.9.9",
  "pyheck>=0.1.5",
  "pyjwt>=2.9.0",
  "passlib>=1.7.4",
  "bcrypt==4.0.1",
  "redis>=5.0.8",
  "pillow>=10.4.0",
]
requires-python = "==3.11.*"
readme = "README.md"
license = { text = "CC BY-NC-SA 3.0" }


[tool.pdm]
distribution = false


[tool.pdm.dev-dependencies]
dev = ["ruff>=0.5.7"]


[tool.pdm.scripts]
"dev" = "uvicorn src.server:app --reload"
"start" = "uvicorn src.server:app --host 0.0.0.0 --port 8000"
"migrate" = "alembic upgrade head"
"fix" = "ruff check src --fix"
"lint" = "ruff check src"
"format" = "ruff format src"


[tool.ruff]
line-length = 120


[tool.ruff.lint]
select = ["E", "F", "I"]
